Add dummy API endpoint for manipulating the config of the AL process
